--- a/project3/tbfd/package.json
+++ b/project3/tbfd/package.json
@@ -1,37 +1,44 @@
 {
-  "name": "login-register-react",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "delay": "^4.2.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-pose": "^4.0.8",
-    "react-scripts": "3.0.1",
-    "react-spring": "^8.0.20"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "node-sass": "^4.12.0"
-  }
+    "name": "login-register-react",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "bulma": "^0.8.0",
+        "delay": "^4.2.0",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-pose": "^4.0.8",
+        "react-router-dom": "^5.1.2",
+        "react-scripts": "3.0.1",
+        "react-spring": "^8.0.20"
+    },
+    "scripts": {
+        "build-css": "node-sass-chokidar src/ -o src/",
+        "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+        "start-js": "react-scripts start",
+        "start": "npm-run-all -p watch-css start-js",
+        "build": "npm run build-css && react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "node-sass": "^4.12.0",
+        "node-sass-chokidar": "^1.4.0",
+        "npm-run-all": "^4.1.5"
+    }
 }
