--- a/MovieSearch/moviedb/package.json
+++ b/MovieSearch/moviedb/package.json
@@ -12,6 +12,7 @@
         "react": "^16.13.0",
         "react-bootstrap": "^1.0.0-beta.17",
         "react-dom": "^16.13.0",
+        "react-media": "^1.10.0",
         "react-router": "^5.1.2",
         "styled": "^1.0.0",
         "styled-components": "^5.0.1"
