--- a/MovieSearch/moviedb/package.json
+++ b/MovieSearch/moviedb/package.json
@@ -14,6 +14,7 @@
         "react-dom": "^16.13.0",
         "react-media": "^1.10.0",
         "react-router": "^5.1.2",
+        "react-router-dom": "^5.1.2",
         "styled": "^1.0.0",
         "styled-components": "^5.0.1"
     },
